--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 port_number=8000
-host="aradhaya-minerals.cvvq0uavgzap.eu-north-1.rds.amazonaws.com"
+host="aradhaya-mineral.cvvq0uavgzap.eu-north-1.rds.amazonaws.com"
 user="admin"
 password="password"
-database="aradhaya_minerals"
+database="db"
 jwt_token="skdjfkljjjjjjjfjsddfker3j434#lsdkfjsdkfnlnDSsdSDFA"
